--- a/public/index.production.html
+++ b/public/index.production.html
@@ -9,10 +9,10 @@
       name="description"
       content="Bank Center Credit - Интернет-банкинг"
     />
-    <!-- CSP для development режима -->
+    <!-- Строгий CSP для production -->
     <meta http-equiv="Content-Security-Policy" 
           content="default-src 'self'; 
-                   script-src 'self' 'unsafe-eval' 'unsafe-inline' https://localhost:7175; 
+                   script-src 'self'; 
                    style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; 
                    font-src 'self' https://fonts.gstatic.com; 
                    connect-src 'self' https://localhost:7175 https://api.bcc.kz; 
